--- a/Technical/src/main/webapp/WEB-INF/templates/MainTemplate.xhtml
+++ b/Technical/src/main/webapp/WEB-INF/templates/MainTemplate.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:tr="http://nya.desu/translator"
       xmlns:p="http://primefaces.org/ui">
 
@@ -13,6 +14,9 @@
         <h:outputStylesheet library="css" name="template.css"/>
         <h:outputScript library="js" name="common.js"/>
         <h:outputStylesheet library="css" name="ncomponents.css"/>
+        <c:forEach items="#{workspace.styleSheets}" var="css">
+            <h:outputStylesheet library="css" name="#{css}"/>
+        </c:forEach>
         <title>#{workspace.title}</title>
     </h:head>
     <h:body>
