--- a/Nihongo/src/main/webapp/resources/nihongo/css/common.css
+++ b/Nihongo/src/main/webapp/resources/nihongo/css/common.css
@@ -7,3 +7,13 @@
     color: #D20005 !important;
     border-color: #D20005 !important;
 }
+
+.kanjiTest {
+    padding: 0 !important;
+    text-align: center !important;
+}
+
+.rei {
+    font-weight: bold !important;
+    font-style: italic !important;
+}
