--- a/Technical/src/main/webapp/WEB-INF/templates/MainTemplate.xhtml
+++ b/Technical/src/main/webapp/WEB-INF/templates/MainTemplate.xhtml
@@ -14,7 +14,7 @@
         <h:outputStylesheet library="css" name="template.css"/>
         <h:outputScript library="js" name="common.js"/>
         <h:outputStylesheet library="css" name="ncomponents.css"/>
-        <c:forEach items="#{workspace.styleSheets}" var="css">
+        <c:forEach items="#{workspace.getStyleSheets()}" var="css">
             <h:outputStylesheet library="#{workspace.currentWorkspace}" name="css/#{css}"/>
         </c:forEach>
         <title>#{workspace.title}</title>
