--- a/Nihongo/src/main/webapp/resources/nihongo/css/common.css
+++ b/Nihongo/src/main/webapp/resources/nihongo/css/common.css
@@ -22,6 +22,9 @@
     font-size: 17px !important;
     border: 0;
 }
+.no-padding {
+    padding: 0 !important;
+}
 .listUnit.ui-state-active {
     text-decoration: line-through !important;
 }
